# codecollab-live

./: .env.docker  Dockerfile  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  dev.db  main.py  pyproject.toml  verify_api.py
backend/app/: database.py  db.py  executor.py  models.py  orm_models.py
backend/tests/: conftest.py  test_execute.py  test_sessions.py
frontend/: .dockerignore  Dockerfile  default.conf  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/components/: CodeEditor.tsx  CreateSessionDialog.tsx  JoinSessionDialog.tsx  LanguageSelector.test.tsx  LanguageSelector.tsx  ParticipantsPanel.tsx  ShareLink.test.tsx  ShareLink.tsx  SyncIndicator.test.tsx
frontend/src/pages/: Interview.tsx
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: interview.ts
src/: index.css
src/components/: OutputPanel.test.tsx  OutputPanel.tsx  ParticipantsPanel.test.tsx  SyncIndicator.tsx
src/components/ui/: button.test.tsx  button.tsx
src/pages/: Index.tsx
src/services/: api.test.ts  api.ts
src/types/: interview.test.ts
